--- a/Homeworks/Animations/index.html
+++ b/Homeworks/Animations/index.html
@@ -29,8 +29,9 @@
 	</div>
 	
 	<div id="colums">
-		<figure class="circleRolingCube"> </figure>
-		<div class="qube"></div>
+		<figure class="circleRolingCube"></figure>
+		<div class="noFilledQube"></div>
+		<div class="filingQube"></div>
 	</div>
 </div>
 </body>
