add read & delete options

--- a/Homeworks/Portfolio page/index.html
+++ b/Homeworks/Portfolio page/index.html
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="row">
 		<h1 class="sectionHeading">Viktor Dimitrievski</h2>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img alt="Photo of my" class="img-fluid" src="img/me.png">
 			</div>
 			<div class="col-lg-8 col-lg-offset-1">
@@ -77,31 +77,31 @@
 		</div>
 		<div class="row marginTen">
 
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
 		</div>
 		
 		<div class="row marginTen">
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
-			<div class="col-lg-3">
+			<div class="col-lg-3 col-sm-12">
 				<img width="255px" height="255px" src="img/project.jpg">
 			</div>
 		</div>
