update for update button
need to save input values inside input fileds

--- a/EXAMS/index.html
+++ b/EXAMS/index.html
@@ -31,8 +31,8 @@
 </tbody>
 </table>
 
+<h3>Details:</h3>
 <div id="details">
-
 </div>
 
 <script type="text/javascript" src="js/myScript.js"></script>
