--- a/Exercises/list/index.html
+++ b/Exercises/list/index.html
@@ -23,32 +23,39 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12">
-					<ul class="list-group" id="list-group-first">
+					<ul class="list-group">
 						<li class="list-group-item">Изградба на Фекален Колектор – населба Лисиче 2011 г</li>
 						<li class="list-group-item">Изградба на Управна зграда на ЈП Водовод и Канализација –Скопје 2011г</li>
 						<li class="list-group-item">Реконструкција и санација на СОУ Кочо Рацин – Велес 2013г</li>
 						<li class="list-group-item">Реконструкција и Санација на ОУ Маршал Тито – Муртино 2013г</li>
 						<li class="list-group-item">Замена на бакарен покривач на кров на Влада на РМ 2013 г</li>
-						<li class="list-group-item" id="hideInList">Изградба на ревизиони водоводни шахти  - Скопје 2012 и 2013 г</li>
-						<li class="list-group-item" id="hideInList">Реконструкција и санација на ЈЗУ Општа болница – Струмица 2013 г</li>
-						<li class="list-group-item" id="hideInList">Изградба на Болница ПЕТ Центар – Скопје 2013-2014</li>
-						<li class="list-group-item" id="hideInList">Изведба на рехабилитација на 10(десет) основни училишта и 6(шест) средни училишта во Р.Македонија 2013-2014г</li>
-						<li class="list-group-item" id="hideInList">Изведба на рехабилитација на 8(осум) училишта во Р.Македонија 2014 г</li>
-						<li class="list-group-item" id="hideInList">Извведување на градежни и градежно-занаетчиски работи при реконструкција и адаптација на ЈЗУ Клиника за кардиологија Скопје 2014</li>
+						<li class="list-group-item showHide">Изградба на ревизиони водоводни шахти  - Скопје 2012 и 2013 г</li>
+						<li class="list-group-item showHide">Реконструкција и санација на ЈЗУ Општа болница – Струмица 2013 г</li>
+						<li class="list-group-item showHide">Изградба на Болница ПЕТ Центар – Скопје 2013-2014</li>
+						<li class="list-group-item showHide">Изведба на рехабилитација на 10(десет) основни училишта и 6(шест) средни училишта во Р.Македонија 2013-2014г</li>
+						<li class="list-group-item showHide">Изведба на рехабилитација на 8(осум) училишта во Р.Македонија 2014 г</li>
+						<li class="list-group-item showHide">Извведување на градежни и градежно-занаетчиски работи при реконструкција и адаптација на ЈЗУ Клиника за кардиологија Скопје 2014</li>
 					</ul>
 				</div>
 				
 				<div class="col-lg-6 col-md-6 col-sm-12">
-					<ul class="list-group" id="list-group-second">
+					<ul class="list-group">
 						<li class="list-group-item">Изградба на мала спортска сала во ДСУ Методија Митевски – Брицо, Скопје 2013г</li>
 						<li class="list-group-item">Адаптација на фудбалско игралиште во село Мороишта – Струга 2014г</li>
 						<li class="list-group-item">Адаптација на спортски полигон во село Нерези – Струга 2014г</li>
 						<li class="list-group-item">Адаптација на објект за потребите на Универзитетот за информатички науки и технологии, Охрид – касарна 1</li>
+						<li class="list-group-item showHshowHideide">Реконструкцја на 25 основни школи во Р.Македонија – Светска банка – 2010 година</li>
+						<li class="list-group-item showHide">Хидроизолација на каптажа Рашче – ЈП Водовод и канализација – 2011 година</li>
+						<li class="list-group-item showHide">Реконструкција на воени објекти – Министерство за одбрана –  2010 година</li>
+						<li class="list-group-item showHide">Изградба на болница Неуромедика – Емил Угриновски - 2015 година</li>
+						<li class="list-group-item showHide">Изведба на фасада на ул.Никола Вапцаров бр. 10 – Град Скопје – 2015 година</li>
+						<li class="list-group-item showHide">Изградба на стамбен објект на ул. Ристо Равановски бр.11 –  Гибрис Холдинг – 2015 година </li>
 					</ul>
 				</div>
 			</div>
 			<div class="row">
 				<span class="showMeMore" id="showMe"><i class="fa fa-plus-circle"></i> Прикажи повеќе</span>
+				<span class="showMeLess" id="showMe"><i class="fa fa-minus-circle"></i> Прикажи помалку</span>
 			</div>
 		</div>
 	</section>
