--- a/EXAMS/12 feb/index.html
+++ b/EXAMS/12 feb/index.html
@@ -12,16 +12,16 @@
 
 <body>
 
-    <div class="container">
+    <div class="container" id="dodavanjeReceptDisplay">
         <div class="row">
             <h1>Внес на нов рецепт</h1>
             <hr>
             <div class="col-lg-4">
                 <label>Име на рецепт:
-                    <input type="text" required id="ime">
+                    <input type="text" class="form-control" required id="ime" value="Макарони" size="35">
                 </label>
                 <label>Извор на рецепт:
-                    <input type="text" required id="izvor">
+                    <input type="text" class="form-control" required id="izvor" value="www.mama.mk" size="35">
                 </label>
                 <h2>Состојки:</h2>
                 <table>
@@ -31,99 +31,114 @@
                             <td>Количина</td>
                         </tr>
                     </thead>
-                    <tbody id="dodavanjeSostojka">
+                    <tbody id="dodavanjeSostojkaDisplay">
                         <tr id="prvaSostojka">
                             <td>
-                                <select id="sostojka" required>
-                                    <option value="default">Select ingridient</option>
-                                    <option value="brasno">Brasno</option>
-                                    <option value="mleko">Mleko</option>
-                                    <option value="maslo">maslo</option>
-                                    <option value="sol">sol</option>
-                                    <option value="seker">seker</option>
-                                    <option value="jajca">jajca</option>
-                                    <option value="domati">domati</option>
-                                    <option value="piperki">piperki</option>
-                                    <option value="sirenje">sirenje</option>
-                                    <option value="kaskaval">kaskaval</option>
-                                    <option value="kompir">kompir</option>
-                                    <option value="meso">meso</option>
-                                </select>
+                                <fieldset class="form-group">
+                                    <select class="sostojka form-control" data-id="0">
+                                        <option value="default">Состојка...</option>
+                                        <option value="brasno">Брашно</option>
+                                        <option value="mleko">Млеко</option>
+                                        <option value="maslo">Масло</option>
+                                        <option value="sol">Сол</option>
+                                        <option value="seker">Шеќер</option>
+                                        <option value="jajca">Јајца</option>
+                                        <option value="domati">Домати</option>
+                                        <option value="piperki">Пиперки</option>
+                                        <option value="sirenje">Сирење</option>
+                                        <option value="kaskaval">Кашкавал</option>
+                                        <option value="kompir">Компир</option>
+                                        <option value="meso">Месо</option>
+                                    </select>
+                                </fieldset>
                             </td>
                             <td>
-                                <input type="number" id="kolicestvo">
+                                <fieldset class="form-group">
+                                    <input type="number" class="form-control" id="kolicestvo" value="4">
+                                </fieldset>
                             </td>
                         </tr>
                     </tbody>
                 </table>
+                <button id="btnDodadiSostojka" class="btn btn-info">Додади Состојка</button>
 
-                <button type="button" id="dodadiRecept">Додади РЕЦЕПТ</button>
-            </div>
-            <div class="col-lg-6">
                 <label for="">Време за подготовка:
-                    <input type="number" required id="vreme">
+                    <input type="number" class="form-control" required id="vreme" value="3h">
                 </label>
+                <label>
+                        <input type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>Минути    
+                        
+                    </label>
+                    <label>
+                    <input type="radio" name="exampleRadios" id="exampleRadios2" value="option2" checked>Часа    
+                    </label>g
+                <div class="radio">
+                    
+                </div>
                 <br>
                 <label for="">Начин на подготовка</label>
                 <br>
-                <textarea id="podgotovka"></textarea>
+                <textarea id="podgotovka" rows="5" cols="45"></textarea>
             </div>
+        </div>
+        <div class="col-lg-6">
+
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <button id="dodadiSostojka">Додади Состојка</button>
+                <button type="button" id="dodadiRecept" class="btn btn-success btn-lg btn-block">ДОДАДИ НОВ РЕЦЕПТ</button>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+    <hr>
+
+    <div class="container" id="prikazuvanjeReceptiDisplay">
+
+
+        <h1>Листа на рецепти приготвени од кујната на баба</h1>
+        <div class="row">
+            <div class="col-lg-12 table-responsive">
+                <table class="table" id="listaRecepti">
+                    <thead class="thead-inverse">
+                        <tr>
+                            <td>ID</td>
+                            <td>Име на рецепт</td>
+                            <td>Извор на рецепт</td>
+                            <td>Број на состојки</td>
+                            <td>Подготовка</td>
+                            <td>Време на подготовка</td>
+                        </tr>
+                    </thead>
+                    <tbody class="table-striped">
+
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 
 
-<!--
 
-    <hr>
-    <section id="listaRecepti">
+
+
+    <section id="prikazReceptDisplay">
         <div class="container">
-            <h1>Листа на рецепти приготвени од кујната на баба</h1>
+
             <div class="row">
-                <div class="col-12">
-                    <table>
-                        <thead>
-                            <tr>
-                                <td>ID</td>
-                                <td>Име на рецепт</td>
-                                <td>Извор на рецепт</td>
-                                <td>Број на состојки</td>
-                                <td>Подготовка</td>
-                                <td>Време на подготовка</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="col-lg-8" id="zaOpstiPrikaz">
+
+                </div>
+                <div class="col-lg-4>" id="zaNacinPrikaz">
+
                 </div>
             </div>
         </div>
     </section>
-
-
-    <section id="prikazRecept">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-
-                </div>
-                <div class="col-lg-7>">
-
-                </div>
-            </div>
-        </div>
-    </section>-->
 
 
     <script src="js/jquery-2.2.0.min.js"></script>
